--- a/LearningInterfaceBuilder/LearningInterfaceBuilder/Base.lproj/Main.storyboard
+++ b/LearningInterfaceBuilder/LearningInterfaceBuilder/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="jyR-la-vjy">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="jyR-la-vjy">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -9,29 +9,38 @@
         <scene sceneID="ydJ-gw-pcU">
             <objects>
                 <viewController id="jyR-la-vjy" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="ZPe-dE-8BX"/>
+                        <viewControllerLayoutGuide type="bottom" id="Ouq-Pm-iGx"/>
+                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="3n7-0e-XYr">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="My First iOS App" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Qka-AQ-bxT">
-                                <rect key="frame" x="96" y="273" width="128" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="My First iOS App" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qka-AQ-bxT">
+                                <rect key="frame" x="123.5" y="323" width="128" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="Ebo-Rg-p7X">
-                                <rect key="frame" x="128" y="518" width="64" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ebo-Rg-p7X">
+                                <rect key="frame" x="155" y="629" width="64" height="30"/>
                                 <state key="normal" title="A Button!"/>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="0.08500737879566489" green="0.10495993782809943" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="Qka-AQ-bxT" firstAttribute="centerX" secondItem="3n7-0e-XYr" secondAttribute="centerX" id="8MQ-tY-yDd"/>
+                            <constraint firstItem="Qka-AQ-bxT" firstAttribute="centerY" secondItem="3n7-0e-XYr" secondAttribute="centerY" id="W1W-w8-Skr"/>
+                            <constraint firstItem="Ebo-Rg-p7X" firstAttribute="centerX" secondItem="3n7-0e-XYr" secondAttribute="centerX" id="XjJ-aS-V1b"/>
+                            <constraint firstItem="Ouq-Pm-iGx" firstAttribute="top" secondItem="Ebo-Rg-p7X" secondAttribute="bottom" constant="8" id="qoy-SW-J1l"/>
+                        </constraints>
                     </view>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pY9-3B-bYQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="223" y="385"/>
+            <point key="canvasLocation" x="430.5" y="452.5"/>
         </scene>
     </scenes>
 </document>
